--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension File::Zglob
 
+0.02
+
+    - make deep recursion as fatal error
+
 0.01    Fri Sep 23 12:21:47 2011
     - original version
