--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension File::Zglob
 
+0.05
+
+    - support ~foo/
+    - ignore case on osx, win32
+
 0.04
 
     - pod fix
