Checking in changes prior to tagging of version 0.06.
Changelog diff is:

diff --git a/Changes b/Changes
index c931d36..53af70b 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension File::Zglob

+0.06
+
+    - '0' is true value.
+    - optimization
+
 0.05

     - support ~foo/

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension File::Zglob
 
+0.06
+
+    - '0' is true value.
+    - optimization
+
 0.05
 
     - support ~foo/
