Checking in changes prior to tagging of version 0.09.
Changelog diff is:

diff --git a/Changes b/Changes
index 1a74229..2683c5c 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension File::Zglob

+0.09
+
+    - Support "." in path segments(cho45)
+
 0.08

     - win32 fix(mattn++)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension File::Zglob
 
+0.09
+
+    - Support "." in path segments(cho45)
+
 0.08
 
     - win32 fix(mattn++)
