Checking in changes prior to tagging of version 0.10.
Changelog diff is:

diff --git a/Changes b/Changes
index 2683c5c..9b2a5ad 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension File::Zglob

+0.10
+
+    - support '..' in path segments
+
 0.09

     - Support "." in path segments(cho45)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension File::Zglob
 
+0.10
+
+    - support '..' in path segments
+
 0.09
 
     - Support "." in path segments(cho45)
