--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension File::Zglob
 
+0.11
+
+    - tiny fix, no feature changes.
+
 0.10
 
     - support '..' in path segments
